--- a/_config.yml
+++ b/_config.yml
@@ -29,23 +29,23 @@ description: >- # used by seo meta and the atom feed
 url: ""
 
 github:
-  username: github_username # change to your github username
+  username: teeboy2791 # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: Tony_Godson # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Tony Godson
+  email: tonygodson@hotmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://twitter.com/Tony_Godson # change to your twitter homepage
+    # - https://github.com/username # change to your github homepage
     # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.facebook.com/tonygodson
+    - https://www.linkedin.com/in/tonygodson/
 
 google_site_verification: # fill in to your verification string
 
