--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
   A collections of hobbies and projects I am doing now I am not working.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ""
+url: "https://teeboy2791.github.io/"
 
 github:
   username: teeboy2791 # change to your github username
